CCD-5849 re-jig Elasticsearch container startup config