@@ -6,7 +6,6 @@ import com.github.tomakehurst.wiremock.client.WireMock;
 import com.google.common.collect.Lists;
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
-import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -23,16 +22,12 @@ import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.testcontainers.containers.wait.strategy.HttpWaitStrategy;
-import org.testcontainers.elasticsearch.ElasticsearchContainer;
 import uk.gov.hmcts.ccd.data.casedetails.SecurityClassification;
 import uk.gov.hmcts.ccd.data.casedetails.search.MetaData;
 import uk.gov.hmcts.ccd.domain.model.definition.CaseDetails;
@@ -51,8 +46,6 @@ import uk.gov.hmcts.ccd.test.ElasticsearchTestHelper;
 import uk.gov.hmcts.ccd.v2.internal.resource.CaseSearchResultViewResource;
 
 import jakarta.inject.Inject;
-import java.io.IOException;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -190,66 +183,11 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     @Inject
     private ApplicationParams applicationParams;
 
-    private static ElasticsearchITSetup configurer;
-
-    private static ElasticsearchContainer container;
-
     private MockMvc mockMvc;
-
-    static {
-        String elasticVersion = System.getProperty("search.elastic.version", "9.0.4");
-        container = new ElasticsearchContainer("docker.elastic.co/elasticsearch/elasticsearch:"
-            + elasticVersion)
-            .withEnv("discovery.type", "single-node")
-            .withExposedPorts(9200)
-            .withEnv("xpack.security.enabled", "false")
-            .withEnv("xpack.security.transport.ssl.enabled", "false")
-            .withEnv("ES_JAVA_OPTS", "-Xms1g -Xmx1g");
-
-        container.setWaitStrategy(new HttpWaitStrategy()
-            .forPath("/_cluster/health")
-            .forPort(9200)
-            .forStatusCode(200)
-            .withStartupTimeout(Duration.ofMinutes(3)));
-
-        container.start();
-        int mappedPort = container.getMappedPort(9200);
-        log.info("Elastic search started on port {}", mappedPort);
-
-        configurer = new ElasticsearchITSetup(mappedPort);
-
-        initialiseContainer();
-    }
-
-    private static void initialiseContainer() {
-        log.info("Elastic search adding indexes.");
-        try {
-            configurer.initIndexes();
-            log.info("Elastic search adding data.");
-            configurer.initData();
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to initialize Elasticsearch test data", e);
-        }
-    }
-
-    @DynamicPropertySource
-    static void elasticsearchProperties(DynamicPropertyRegistry registry) {
-        registry.add("search.elastic.hosts", () -> container.getHost());
-        registry.add("search.elastic.port", () -> container.getMappedPort(9200));
-    }
-
-    @AfterAll
-    public static void tearDownElastic() {
-        log.info("Stopping Elastic search");
-        container.stop();
-        log.info("Elastic search stopped.");
-    }
 
     @BeforeEach
     public void prepare() {
         wireMockServer.resetAll();
-
-        initialiseContainer();
 
         final String buildings = fromFileAsString("tests/refdata/get_building_locations.json");
         final String orgServices = fromFileAsString("tests/refdata/get_org_services.json");
@@ -412,21 +350,21 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource =
                 executeRequest(searchRequest, CASE_TYPE_A, "RDM-8782");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             List<String> expectedFields = Collections.singletonList(EMAIL_FIELD);
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(1)),
-                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().get(0)
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(1)),
+                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().getFirst()
                     .getFields(), hasItem(hasProperty(CASE_FIELD_ID, is(f))))),
 
                 () -> assertThat(caseDetails.getFields().get(EMAIL_FIELD), is(EMAIL_VALUE)),
@@ -441,18 +379,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "RDM-8782NOACCESS");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(0)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(0)),
                 () -> assertThat(caseDetails.getFields().size(), is(8)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false)
             );
@@ -478,7 +416,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "ORGCASES");
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -503,16 +441,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -540,16 +478,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "SEARCH");
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -575,14 +513,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(10)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getFields().size(), is(16)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(10)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getFields().size(), is(16)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(2)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -598,14 +536,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -620,7 +558,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData(), is(nullValue()))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData(),
+                    is(nullValue()))
             );
         }
 
@@ -635,14 +574,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -679,7 +618,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .sort("invalid.keyword")
                 .build();
 
-            JsonNode exceptionNode = executeErrorRequest(searchRequest, CASE_TYPE_A, null, 400);
+            JsonNode exceptionNode = executeErrorRequest(searchRequest, CASE_TYPE_A, null,
+                400);
 
             assertAll(
                 () -> assertThat(exceptionNode.get(ERROR_MESSAGE).asText(),
@@ -726,9 +666,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(headers.getFirst().getCases().size(), is(1)),
                 () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
                 () -> assertThat(headers.getFirst().getFields().size(), is(24)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -744,8 +683,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
                 () -> assertThat(headers.getFirst().getFields().size(), is(5)),
                 () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -763,14 +701,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
                 () -> assertThat(headers.getFirst().getFields().size(), is(10)),
                 () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
         private void assertExampleCaseData(Map<String, Object> data, boolean formatted) {
             assertAll(
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1")),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_FIXED_LIST_FIELD), is("VALUE3")),
@@ -778,7 +715,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     .get(NESTED_NUMBER_FIELD), is(NESTED_NUMBER_FIELD_VALUE)),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_TEXT_FIELD), is(COMPLEX_TEXT_VALUE)),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
-                    .get(NESTED_COLLECTION_TEXT_FIELD)).get(0).get(VALUE), is("NestedCollectionTextValue1")),
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).getFirst().get(VALUE), is("NestedCollectionTextValue1")),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
                     .get(NESTED_COLLECTION_TEXT_FIELD)).get(1).get(VALUE), is("NestedCollectionTextValue2")),
                 () -> assertThat(data.get(DATE_FIELD), is(formatted ? "12/2007" : DATE_VALUE)),
@@ -796,7 +733,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(data.get(EMAIL_FIELD), is(EMAIL_VALUE)),
                 () -> assertThat(data.get(FIXED_LIST_FIELD), is(FIXED_LIST_VALUE)),
                 () -> assertThat(data.get(TEXT_FIELD), is(TEXT_VALUE)),
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1"))
             );
@@ -1306,10 +1243,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             void shouldMergePermissionsOfMultipleRolesForCases() throws Exception {
                 if (applicationParams.getEnableAttributeBasedAccessControl()) {
                     String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1588870615652827"),
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1589460125872336")
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1588870615652827"),
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1589460125872336")
                     );
 
                     stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1350,8 +1287,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         void shouldOnlyReturnCasesSolicitorHasBeenGrantedAccessTo() throws Exception {
             if (applicationParams.getEnableAttributeBasedAccessControl()) {
                 String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]", "1589460125872336"),
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]", "1589460099608691")
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]",
+                        "1589460125872336"),
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]",
+                        "1589460099608691")
                 );
 
                 stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1446,7 +1385,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_A).size(), is(2)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_B).size(), is(1)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(0)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(0))
                 );
@@ -1465,13 +1404,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().get(TEXT_ALIAS).asText(),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().get(TEXT_ALIAS).asText(),
                         is(TEXT_VALUE)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().get(TEXT_ALIAS).asText(),
                         is("CCC TextValue")),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().get(TEXT_ALIAS).asText(),
                         is("BBB TextValue")),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(1)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(1))
                 );
@@ -1531,7 +1470,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1555,7 +1494,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1727,7 +1666,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 // verify case data from: `/resources/elasticsearch/data/global_search/global-search-01.json`
                 () -> assertThat(result1.getStateId(), is(STATE_GLOBAL_SEARCH)),
@@ -1786,7 +1725,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
         }
 
         @DisplayName("ES Filters: should not return cases filtered by pre security filters")
@@ -1814,7 +1753,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
         }
 
         @DisplayName("ES Filters: should not return case fields filtered by post filtering authorisation rules")
@@ -2197,15 +2136,15 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             }
 
             if (Arrays.asList(caseTypes).contains("AAT")) {
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588866820969121"));
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1589460056217857"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1", "1588866820969121"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1589460056217857"));
             }
 
             if (Arrays.asList(caseTypes).contains("MAPPER")) {
-                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588870615652827"));
+                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1588870615652827"));
             }
 
             if (Arrays.asList(caseTypes).contains("RESTRICTED_SECURITY")) {
